<resources>
    <string name="app_name">duangiaohang</string>
    <string name="emailnguoidung">Email Người Dùng</string>
    <string name="matkhaunguoidung">Mật Khẩu Người Dùng</string>
    <string name="hoten">Họ Tên</string>
    <string name="email_ng_i_d_ng">Email Người Dùng</string>
    <string name="quy_tr_nh_g_i_m_c_th_m_t_v_i_ph_t">Quy Trình Gửi Mã Có Thể Mất Vài Phút</string>
    <string name="x_c_nh_n_otp">Xác Nhận OTP</string>
    <string name="g_i_l_i_m_x_c_minh">Gửi lại mã xác minh?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ch_a_giao">Chưa Giao</string>
    <string name="giao_sau">Giao Sau</string>
    <string name="m_n_h_ng">Mã Đơn Hàng</string>
    <string name="a_ch_nh_n_h_ng">Địa Chỉ Nhận Hàng</string>
    <string name="a_ch_giao_h_ng">Địa Chỉ Giao Hàng</string>
    <string name="gi_c">Giá Cả</string>
    <string name="loading_data">Loading Data...</string>
    <string name="please_wait">Please Wait...</string>
    <string name="title_activity_change_pass_word_shipper">ChangePassWordShipperActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu</string>
    <string name="l_y_m_sms">Lấy mã SMS</string>
    <string name="nh_n_l_i_m_sau">Nhận lại mã sau:</string>
    <string name="ti_p_t_c">Tiếp tục</string>
    <string name="m_x_c_th_c_otp">Mã xác thực OTP</string>
    <string name="s_i_n_tho_i">Số điện thoại</string>
    <string name="i_m_t_kh_u"><![CDATA[Đổi mật khẩu >]]></string>
    <string name="ng_xu_t_t_i_kho_n">Đăng xuất tài khoản</string>
    <string name="a_ch">Địa chỉ</string>
    <string name="da_ch">Địa Chỉ</string>
    <string name="email">Email</string>
    <string name="i_n_tho_i">Điện thoại</string>
    <string name="i_fn_tho_i">Điện thoại</string>
    <string name="t_n_shipper">Tên Shipper</string>
    <string name="t_n_ng_i_shipper">Tên Người Shipper</string>
    <string name="nh_i_di_n">Ảnh đại diện</string>
    <string name="nh_p_m_t_kh_u_m_i">Nhập mật khẩu mới</string>
    <string name="m_t_kh_u_m_i">Mật khẩu mới</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
</resources>