<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".NewChangePassWordShipperActivity"

    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/vForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                style="@style/prop_tenManHinh"
                android:layout_marginBottom="50dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic|bold"
                android:text="@string/qu_n_m_t_kh_u" />

            <EditText
                android:id="@+id/edtPhoneNumberChanger"
                style="@style/prop_editText"
                android:hint="@string/s_i_n_tho_i"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:autofillHints="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <EditText
                    android:id="@+id/edtOtpInput"
                    style="@style/prop_editText"
                    android:layout_width="200dp"
                    android:hint="@string/m_x_c_th_c_otp"
                    android:inputType="number"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/btnGetOTP"
                    style="@style/prop_Button"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_btntieptuc_clicked"
                    android:text="@string/l_y_m_sms"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/nh_n_l_i_m_sau"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvTimeResendOTP"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="_______"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnTiepTuc"
                style="@style/prop_Button"
                android:layout_marginBottom="50dp"
                android:background="@drawable/bg_btntieptuc_clicked"
                android:text="@string/ti_p_t_c" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>