<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:paddingVertical="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivItemImageSPTC"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40sp"
            android:src="@drawable/ggcacc" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemMaDonHang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_n_h_ng"
                android:textColor="#000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvItemDiaChiNhanHangTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/a_ch_nh_n_h_ng"
                android:textColor="#000"
                android:textSize="12sp"
             />

            <TextView
                android:id="@+id/tvItemDiaChiGiaoHangTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/a_ch_giao_h_ng"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvItemGiaCaTC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gi_c"
                android:textColor="#000"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
